Prod-EU/force-app/main/default/objects/DocuSign_Templates__mdt/DocuSign_Templates__mdt.object-meta.xml
<CustomObject>
    <description>Used to store DocuSign templates configuration for each object: Opportunity/Account</description>
    <label>DocuSign Templates</label>
    <pluralLabel>DocuSign Templates</pluralLabel>
</CustomObject>