Prod-EU/force-app/main/default/objects/DocuSign_Templates__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA_Opportunity</fullName>
                <default>true</default>
                <label>CA_Opportunity</label>
            </value>
            <value>
                <fullName>EMEA_CH_Opportunity</fullName>
            </value>
            <value>
                <fullName>GB_Opportunity</fullName>
            </value>
            <value>
                <fullName>IE_Opportunity</fullName>
            </value>
            <value>
                <fullName>US_Opportunity</fullName>
            </value>
            <value>
                <fullName>CA_Payor</fullName>
            </value>
            <value>
                <fullName>Business_Account</fullName>
            </value>
            <value>
                <fullName>CA_Consumer</fullName>
            </value>
            <value>
                <fullName>DE_Opportunity</fullName>
            </value>
            <value>
                <fullName>GB_Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>